--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                 <ul class="head-links-list outside">
                     <li class="head-links">                                                  
                         <a href="mailto:info@devstudio.com" class="contact-link"> 
-                            <svg class="element email" width="16" height="12"> 
+                            <svg class="element email" width="16" height="16"> 
                                 <use href="./img/icons.svg#email"></use>
                             </svg>
-                            &nbsp;info@devstudio.com 
+                            &nbsp;&nbsp;info@devstudio.com 
                         </a>
                     </li>
                     <li class="head-links">                        
                         <a href="tel:+380961111111" class="contact-link"> 
-                            <svg class="element smartphone " width="10" height="16"> 
+                            <svg class="element smartphone " width="14" height="20"> 
                                 <use href="./img/icons.svg#smartphone"></use>
                             </svg>
                             &nbsp;+38 096 111 11 11 
@@ -264,42 +264,42 @@
                         <li class="clients-list-element">
                             <a href="" class="clients-list-link">
                                 <svg class="clients-list-icon" width="106" height="60">
-                                    <use href="./img/icons.svg#logo"></use>
+                                    <use href="./img/icons2.svg#logo"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="clients-list-element">
                             <a href="" class="clients-list-link">
                                 <svg class="clients-list-icon" width="106" height="60">
-                                    <use href="./img/icons.svg#logo1"></use>
+                                    <use href="./img/icons2.svg#logo1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="clients-list-element">
                             <a href="" class="clients-list-link">
                                 <svg class="clients-list-icon" width="106" height="60">
-                                    <use href="./img/icons.svg#logo2"></use>
+                                    <use href="./img/icons2.svg#logo2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="clients-list-element">
                             <a href="" class="clients-list-link">
                                 <svg class="clients-list-icon" width="106" height="60">
-                                    <use href="./img/icons.svg#logo3"></use>
+                                    <use href="./img/icons2.svg#logo3"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="clients-list-element">
                             <a href="" class="clients-list-link">
                                 <svg class="clients-list-icon" width="106" height="60">
-                                    <use href="./img/icons.svg#logo4"></use>
+                                    <use href="./img/icons2.svg#logo4"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="clients-list-element">
                             <a href="" class="clients-list-link">
                                 <svg class="clients-list-icon" width="106" height="60">
-                                    <use href="./img/icons.svg#logo5"></use>
+                                    <use href="./img/icons2.svg#logo5"></use>
                                 </svg>
                             </a>
                         </li>
@@ -320,7 +320,7 @@
                     </address>
                 </div>                
                 <div class="social">
-                    <h2 class="social-title">Присоединяйтесь</h2>
+                    <p class="social-title">Присоединяйтесь</p>
                     <ul class="social-list">
                         <li class="social-element">
                             <a href="" class="social-link">
